Name:                Knyaz
Version:             0.1
Synopsis:            General purpose library
Description:         My private general purpose library
License:             GPL-3
License-file:        LICENSE
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           Experimental

Library
  hs-source-dirs:    Source
  Build-Depends:     base >= 4 && < 5,
                     bytestring >= 0.9 && < 0.10
  Exposed-modules:   Knyaz
  ghc-options:       -Wall
