Name:                Knyaz
Version:             0.1
Synopsis:            General purpose library
Description:         My private general purpose library
License:             GPL-3
License-file:        LICENSE
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           Experimental

Library
  hs-source-dirs:    Source
  Build-Depends:     base >= 4 && < 5,
                     bytestring >= 0.9 && < 0.10,
                     mtl >= 2.0 && < 2.1,
                     contstuff >= 1.2 && < 1.3,
                     stm >= 2.2 && < 2.3,
                     directory >= 1.1 && < 1.2,
                     filepath >= 1.2 && < 1.3
  Exposed-modules:   Knyaz.ByteString
                     Knyaz.Console
                     Knyaz.Directory
                     Knyaz.Forkable
                     Knyaz.String
  ghc-options:       -Wall
