Name:                Knyaz
Version:             0.1
Synopsis:            General purpose library
Description:         My private general purpose library
License:             GPL-3
License-file:        LICENSE
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           Experimental

Library
  hs-source-dirs:    Source
  Build-Depends:     base >= 4 && < 5,
                     bytestring >= 0.9 && < 0.10,
                     directory >= 1.1 && < 1.2,
                     filepath >= 1.2 && < 1.3,
                     mtl >= 2.0 && < 2.1,
                     utf8-string >= 0.3 && < 0.4
  Exposed-modules:   Knyaz.ByteString
                     Knyaz.Console
                     Knyaz.Directory
                     Knyaz.File
                     Knyaz.Forkable
                     Knyaz.String
  ghc-options:       -Wall
